REFACTOR: fix checkstyle violations